# mdi_pil

./: .gitignore  README.MD  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml  pypi-test.yml  test_push.yml
examples/: base_example.py  ttk_example.py
mdi_pil/: constants.py
src/mdi_pil/: __init__.py
test/: pil_testsimages.py  ttk_test.py
